--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -34,6 +34,577 @@
     "for coordinate in coordinates:\n",
     "    print(coordinate[0], coordinate[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the requests library.\n",
+    "import requests\n",
+    "\n",
+    "# Import the API key.\n",
+    "from config import weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=c94870f136fc2b308352e1a0af3bf991\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Starting URL for Weather Map API Call.\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=c94870f136fc2b308352e1a0af3bf991&q=Boston\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "print(city_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a 'Get' request for the city weather.\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [404]>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Bston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":804,\"main\":\"Clouds\",\"description\":\"overcast clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":56.1,\"feels_like\":52.54,\"temp_min\":52,\"temp_max\":57.99,\"pressure\":1008,\"humidity\":24},\"visibility\":10000,\"wind\":{\"speed\":13.8,\"deg\":340,\"gust\":21.85},\"clouds\":{\"all\":90},\"dt\":1617647645,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1617617956,\"sunset\":1617664442},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the text of the 'Get' request.\n",
+    "city_weather.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 804,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 56.1,\n",
+       "  'feels_like': 52.54,\n",
+       "  'temp_min': 52,\n",
+       "  'temp_max': 57.99,\n",
+       "  'pressure': 1008,\n",
+       "  'humidity': 24},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 13.8, 'deg': 340, 'gust': 21.85},\n",
+       " 'clouds': {'all': 90},\n",
+       " 'dt': 1617647645,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 3486,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1617617956,\n",
+       "  'sunset': 1617664442},\n",
+       " 'timezone': -14400,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the JSON text of the 'Get' request.\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City Weather found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City Weather found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Bston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.json():\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=c94870f136fc2b308352e1a0af3bf991&q=Bston\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(city_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 804,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 56.26,\n",
+       "  'feels_like': 52.9,\n",
+       "  'temp_min': 52,\n",
+       "  'temp_max': 59,\n",
+       "  'pressure': 1008,\n",
+       "  'humidity': 28},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 16.11, 'deg': 360, 'gust': 25.32},\n",
+       " 'clouds': {'all': 90},\n",
+       " 'dt': 1617650871,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 3486,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1617617956,\n",
+       "  'sunset': 1617664442},\n",
+       " 'timezone': -14400,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the JSON data.\n",
+    "boston_data = city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 1,\n",
+       " 'id': 3486,\n",
+       " 'country': 'US',\n",
+       " 'sunrise': 1617617956,\n",
+       " 'sunset': 1617664442}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data['sys']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'US'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data['sys'][\"country\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1617650871"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data['dt']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lon': -71.0598, 'lat': 42.3584}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data['coord']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42.3584"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data[\"coord\"][\"lat\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.3584 -71.0598 59 28 90 16.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "lat = boston_data[\"coord\"][\"lat\"]\n",
+    "lng = boston_data[\"coord\"][\"lon\"]\n",
+    "max_temp = boston_data[\"main\"][\"temp_max\"]\n",
+    "humidity = boston_data[\"main\"][\"humidity\"]\n",
+    "clouds = boston_data[\"clouds\"][\"all\"]\n",
+    "wind = boston_data[\"wind\"][\"speed\"]\n",
+    "print(lat, lng, max_temp, humidity, clouds, wind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2021, 4, 5, 19, 27, 51)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the datetime module from the datetime library.\n",
+    "from datetime import datetime\n",
+    "# Get the date from the JSON file.\n",
+    "date = boston_data[\"dt\"]\n",
+    "# Convert the UTC date to a date format with year, month, day, hours, minutes, and seconds.\n",
+    "datetime.utcfromtimestamp(date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2021-04-05 19:27:51'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the datetime module from the datetime library.\n",
+    "from datetime import datetime\n",
+    "# Get the date from the JSON file.\n",
+    "date = boston_data[\"dt\"]\n",
+    "# Convert the UTC date to a date format with year, month, day, hours, minutes, and seconds.\n",
+    "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beginning Data Retrieval     \n",
+      "-----------------------------\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'cities' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-32-f7b5717c564e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# Loop through all the cities in the list.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcity\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcities\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;31m# Group cities in sets of 50 for logging purposes.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'cities' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an empty list to hold the weather data.\n",
+    "city_data = []\n",
+    "# Print the beginning of the logging.\n",
+    "print(\"Beginning Data Retrieval     \")\n",
+    "print(\"-----------------------------\")\n",
+    "\n",
+    "# Loop through all the cities in the list.\n",
+    "for i, city in enumerate(cities):\n",
+    "\n",
+    "    # Group cities in sets of 50 for logging purposes.\n",
+    "    if (i % 50 == 0 and i >= 50):\n",
+    "        set_count += 1\n",
+    "        record_count = 1\n",
+    "    # Create endpoint URL with each city.\n",
+    "    city_url = url + \"&q=\" + city.replace(\" \",\"+\")\n",
+    "\n",
+    "    # Log the URL, record, and set numbers and the city.\n",
+    "    print(f\"Processing Record {record_count} of Set {set_count} | {city}\")\n",
+    "    # Add 1 to the record count.\n",
+    "    record_count += 1\n",
+    "    # Run an API request for each of the cities.\n",
+    "    try:\n",
+    "        # Parse the JSON and retrieve data.\n",
+    "        city_weather = requests.get(city_url).json()\n",
+    "        # Parse out the needed data.\n",
+    "        city_lat = city_weather[\"coord\"][\"lat\"]\n",
+    "        city_lng = city_weather[\"coord\"][\"lon\"]\n",
+    "        city_max_temp = city_weather[\"main\"][\"temp_max\"]\n",
+    "        city_humidity = city_weather[\"main\"][\"humidity\"]\n",
+    "        city_clouds = city_weather[\"clouds\"][\"all\"]\n",
+    "        city_wind = city_weather[\"wind\"][\"speed\"]\n",
+    "        city_country = city_weather[\"sys\"][\"country\"]\n",
+    "        # Convert the date to ISO standard.\n",
+    "        city_date = datetime.utcfromtimestamp(city_weather[\"dt\"]).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "        # Append the city information into city_data list.\n",
+    "        city_data.append({\"City\": city.title(),\n",
+    "                          \"Lat\": city_lat,\n",
+    "                          \"Lng\": city_lng,\n",
+    "                          \"Max Temp\": city_max_temp,\n",
+    "                          \"Humidity\": city_humidity,\n",
+    "                          \"Cloudiness\": city_clouds,\n",
+    "                          \"Wind Speed\": city_wind,\n",
+    "                          \"Country\": city_country,\n",
+    "                          \"Date\": city_date})\n",
+    "\n",
+    "# If an error is experienced, skip the city.\n",
+    "    except:\n",
+    "        print(\"City not found. Skipping...\")\n",
+    "        pass\n",
+    "\n",
+    "# Indicate that Data Loading is complete.\n",
+    "print(\"-----------------------------\")\n",
+    "print(\"Data Retrieval Complete      \")\n",
+    "print(\"-----------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
