--- a/random_numbers.ipynb
+++ b/random_numbers.ipynb
@@ -14,18 +14,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "random.randint(-90, 90)"
    ]
@@ -34,18 +23,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9407604742224586"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "random.random()"
    ]
@@ -58,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "-4.103373416771784"
+       "61.8623221432801"
       ]
      },
      "execution_count": 4,
@@ -79,16 +57,16 @@
     {
      "data": {
       "text/plain": [
-       "[84.14476160388219,\n",
-       " 41.450157765248974,\n",
-       " -3.025489977820081,\n",
-       " 43.288359625384274,\n",
-       " -40.44544016177795,\n",
-       " 11.165283604881752,\n",
-       " 26.195584247563836,\n",
-       " -48.21031522702633,\n",
-       " -37.688240294140904,\n",
-       " 20.664768570208533]"
+       "[-55.49814728215727,\n",
+       " -7.156486520733036,\n",
+       " 74.17573475856068,\n",
+       " 29.254488432156904,\n",
+       " 84.18273721535941,\n",
+       " 28.691951171065917,\n",
+       " -77.60649264624473,\n",
+       " -20.97176090456683,\n",
+       " -77.31926621930475,\n",
+       " -38.21399733524322]"
       ]
      },
      "execution_count": 5,
@@ -114,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "57"
+       "-59"
       ]
      },
      "execution_count": 6,
@@ -134,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "-33"
       ]
      },
      "execution_count": 7,
@@ -154,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "15.236090249296424"
+       "-71.558172795287"
       ]
      },
      "execution_count": 8,
@@ -168,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,16 +156,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "45.42661058758617"
+       "-55.423779609809166"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "42.71635255520113"
+       "-56.76650245550614"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,28 +196,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 44.15350041, -74.43171123,  24.25849613, -38.58794962,\n",
-       "         7.44814256,  88.45911893,  -4.42690799, -46.53698092,\n",
-       "       -76.98929508,  -0.77310107,   2.66708135,  46.91403878,\n",
-       "        10.09347212,  14.6414463 , -57.91042276,  65.44023033,\n",
-       "       -17.10515663, -45.56667517, -62.66489516, -77.15267122,\n",
-       "       -88.61250203, -36.68218942,  25.99370256,  -8.38969397,\n",
-       "        32.57771044, -84.72198743,  39.19096231,   2.16246616,\n",
-       "        31.45489631,  -1.10366883, -83.04728499,  64.53882858,\n",
-       "        25.14561818, -86.33876977,  39.11890044,  19.59617094,\n",
-       "        36.7573791 ,  -2.86886269,  14.71916912,  78.58833169,\n",
-       "        57.07140083, -11.33922913, -19.57015317, -84.23329802,\n",
-       "        77.77979235,   7.44049675,  45.38379959,  70.932072  ,\n",
-       "        59.34952485,  84.1326389 ])"
+       "array([ 72.78104232, -29.04330557,  25.01766222, -58.59462495,\n",
+       "       -62.59165929, -14.94675086, -36.72977361,  59.75237123,\n",
+       "        57.89513846,  72.50194088, -41.09856058, -77.96299704,\n",
+       "        81.04580467, -49.30149753, -34.51837387, -62.27455778,\n",
+       "       -25.2953498 ,  69.16727434, -28.53182859,  70.69916954,\n",
+       "       -72.38236218,  55.72773477,  33.82817718,  52.8029355 ,\n",
+       "        12.33715319, -49.30167832,  83.45562918, -22.19156504,\n",
+       "        30.99678495,  -9.67217445,  50.82155659, -39.04999823,\n",
+       "        22.24774141, -36.35943357,  36.66595361,  63.36567203,\n",
+       "        87.2413068 , -74.42880193,  20.80731546, -85.37815317,\n",
+       "       -24.61782165,  52.47878836,  33.18839928, -44.75536221,\n",
+       "       -55.02213887,  29.10497568,  46.82044728, -37.57936233,\n",
+       "       -23.03835305,  72.24390715])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.9 µs ± 253 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "11.8 µs ± 242 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -277,14 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "53 µs ± 4 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "51.6 µs ± 531 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -294,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "188 µs ± 2.08 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "192 µs ± 1.99 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -320,14 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "187 µs ± 1.87 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "187 µs ± 5.06 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -340,6 +318,30 @@
     "    return latitudes\n",
     "#call function\n",
     "%timeit latitude(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85.7 µs ± 5.31 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def latitude(size):\n",
+    "    latitudes = []\n",
+    "    for x in range(size):\n",
+    "        random_lat = random.randint(-90, 90) + random.random()\n",
+    "        latitudes.append(random_lat)\n",
+    "    return latitudes\n",
+    "#call function\n",
+    "%timeit latitude(20)"
    ]
   },
   {
