--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,23 +1066,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'nuclear_power_plants' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-43-84e8c1d97354>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplant_info\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0minfo_box_template\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mplant\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mplant\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnuclear_power_plants\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'nuclear_power_plants' is not defined"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d2f108e362634fb2802778b3660b8d41",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "plant_info = [info_box_template.format(**plant) for plant in nuclear_power_plants]"
+    "# Add a heatmap of temperature for the vacation spots and a pop-up marker for each city.\n",
+    "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
+    "max_temp = hotel_df[\"Max Temp\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,dissipating=False,\n",
+    "             max_intensity=300, point_radius=4)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(marker_layer)\n",
+    "\n",
+    "# Call the figure to plot the data.\n",
+    "fig"
    ]
   },
   {
