--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4          75        4.61       broken clouds  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "23          20        4.61          few clouds  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -428,11 +428,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City_ID                174\n",
+       "City                   174\n",
+       "Country                174\n",
+       "Lat                    174\n",
+       "Lng                    174\n",
+       "Max Temp               174\n",
+       "Humidity               174\n",
+       "Cloudiness             174\n",
+       "Wind Speed             174\n",
+       "Current Description    174\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 4b. Drop any empty rows and create a new DataFrame that doesn’t have empty rows.\n"
+    "# 4b. Drop any empty rows and create a new DataFrame that doesn’t have empty rows.\n",
+    "preferred_cities_df.count()"
    ]
   },
   {
@@ -617,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +806,7 @@
        "16                        Paradise Inn  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,12 +818,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 8a. Create the output File (CSV)\n",
-    "output_file = \"../Vacation_Search/WeatherPy_Database.csv\"\n",
+    "output_file = \"../Vacation_Search/WeatherPy_vacation.csv\"\n",
     "\n",
     "# 8b. Export the City_Data into a csv\n",
     "hotel_df.to_csv(output_file, index_label=\"City_ID\")"
@@ -809,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,13 +855,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7580151065794c898c504907b45c031d",
+       "model_id": "3bc7d2c3bc9c4b8aaf18f2256a4b7739",
        "version_major": 2,
        "version_minor": 0
       },
